Fix [Jobs] Artifacts: name and target path overlap (#432)

--- a/src/components/DetailsArtifacts/detailsArtifacts.scss
+++ b/src/components/DetailsArtifacts/detailsArtifacts.scss
@@ -60,6 +60,7 @@
   }
 
   &__name {
+    width: 100%;
     cursor: pointer;
   }
 
